--- a/cart/templates/cart/cart.htm
+++ b/cart/templates/cart/cart.htm
@@ -3,64 +3,49 @@
 
 {% block content %}
 {% include 'snippets/customer-header.htm'%}
+{% include 'snippets/page-header.htm'%}
 
-<section class="page-header">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<div class="content">
-					<h1 class="page-name">Cart</h1>
-					<ol class="breadcrumb">
-						<li><a href="/">Home</a></li>
-						<li class="active">cart</li>
-					</ol>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
-<div class="page-wrapper">
-  <div class="cart shopping">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <div class="block">
-            <div class="product-list">
+<div class="page-wrapper noBig" role="main">
+  <div class="cart shopping noBig">
+    <div class="container noBig">
+      <div class="row noBig">
+        <div class="col-md-8 col-md-offset-2 noBig">
+          <div class="block noBig">
+            <div class="product-list noBig">
               {% regroup cart_items by product.vendor as cart_item %}
               {% for items in cart_item %}
               <div>
-                <form method="post" class="mt-20">
-                  <h4 class="">{{items.grouper.shop_name}}</h4>
-                    <table class="table">
-                      <thead>
-                        <tr>
+                <form method="post" class="mt-20 noBig">
+                  <h2 >{{items.grouper.shop_name}}</h2>
+                    <table class="table noBig">
+                      <thead class="noBig">
+                        <tr class="noBig">
                           <th class="">Item Name</th>
                           <th class="">Unit Price</th>
                           <th class="">Quantity</th>
                           <th class="">Actions</th>
                         </tr>
                       </thead>
-                      <tbody>
+                      <tbody class="noBig">
                         {% for item in items.list %}
-                          <tr class="">
-                            <td class="">
+                          <tr class="noBig">
+                            <td class="noBig">
                               <div class="product-info">
-                                <img width="80" src="/media/{{item.image.image}}" alt="{{item.image.description}}" />
+                                <img width="80" aria-label="product image" src="/media/{{item.image.image}}" alt="{{item.image.description}}"/>
                                 <a href="/shop">{{item.product.title}}</a>
                               </div>
                             </td>
-                            <td class="">{{item.unit_price}}</td>
-                            <td class="">{{item.quantity}}</td>
-                            <td class="">
-                              <a class="product-remove" href="/cart/remove/{{item.id}}">Remove</a>
+                            <td>{{item.unit_price}}</td>
+                            <td >{{item.quantity}}</td>
+                            <td class="noBig">
+                              <a class="product-remove" href="/cart/remove/{{item.id}}" aria-label="remove iterm" role="button">Remove</a>
                             </td>
                           </tr>
                         {% endfor %}
 
                       </tbody>
                     </table>
-                    <a href="/order/checkout/{{items.grouper.id}}" class="btn btn-main pull-right">Checkout</a>
+                    <a href="/order/checkout/{{items.grouper.id}}" class="btn btn-main pull-right" aria-label="checkout">Checkout</a>
                   </form>
                   </div>
                 {% endfor %}
