--- a/customer/templates/customer/forget-password.htm
+++ b/customer/templates/customer/forget-password.htm
@@ -3,15 +3,15 @@
 
 {% block content %}
 
-<section class="forget-password-page account">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-                <div class="block text-center">
-                    <a href="/">
+<section class="forget-password-page account noBig">
+    <div class="container noBig">
+        <div class="row noBig">
+            <div class="col-md-6 col-md-offset-3 noBig">
+                <div class="block text-center noBig">
+                    <a href="/" class="noBig">
                         <img alt="gravater" class="dp" src={% static '/images/favicon.png' %}>
                       </a>
-                      <div class="detail-txt">
+                      <div class="detail-txt noBig">
                         <a href="/">
                           <span class="username">
                             Med-House
@@ -19,16 +19,16 @@
                         </a>
                       </div>
                     <h2 class="text-center">Welcome Back</h2>
-                    <form class="text-left clearfix">
+                    <form class="text-left clearfix noBig">
                         <p>Please enter the email address for your account. A verification code will be sent to you. Once you have received the verification code, you will be able to choose a new password for your account.</p>
                         <div class="form-group">
                             <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Account email address">
                         </div>
-                        <div class="text-center">
+                        <div class="text-center noBig">
                             <button type="submit" class="btn btn-main text-center">Request password reset</button>
                         </div>
                     </form>
-                    <p class="mt-20"><a href="/customer/login">Back to log in</a></p>
+                    <p class="mt-20 noBig"><a href="/customer/login">Back to log in</a></p>
                 </div>
             </div>
         </div>
