--- a/customer/templates/customer/lab.htm
+++ b/customer/templates/customer/lab.htm
@@ -5,9 +5,9 @@
 {% include 'snippets/customer-header.htm'%}
 {% include 'snippets/page-header.htm' %}
 
-{% include 'snippets/lab.htm'%}
-
+<div class="noBig no" role="main">
+    {% include 'snippets/lab.htm'%}
+</div>
 {% include 'snippets/copyright-footer.htm'%}
-{% include 'snippets/chatbot.htm'%}
 
 {% endblock content %}
