--- a/templates/snippets/accessibility_modal.htm
+++ b/templates/snippets/accessibility_modal.htm
@@ -17,8 +17,8 @@
                             <span id="contrast1" class="noBig"><i class="fa fa-minus fa-lg mt-10 noBig" aria-hidden="true"></i> </span><span id="contrast2" class="noBig"><i class="fa fa-minus fa-lg mt-10 noBig" aria-hidden="true"></i> </span>
                         </button>
                         <button type="button" class="btn-css btn-secondary noBig" id="highlight" text-highlight='0'>
-                            <span id="tick" class="noBig"><i class="fa fa-check-circle fa-lg noBig" aria-hidden="true"></i></span>
-                            <div class="text-center  noBig"><i class="fa fa-link fa-2x noBig" aria-hidden="true"></i></div>
+                            <span id="check-highlight" class="noBig"><i class="fa fa-check-circle fa-lg noBig" aria-hidden="true"></i></span>
+                            <div class="text-center mt-10 noBig"><i class="fa fa-link fa-2x noBig" aria-hidden="true"></i></div>
                             <div class="text-center noBig">
                                 Highlight Link
                             </div>
