--- a/templates/snippets/footer2.htm
+++ b/templates/snippets/footer2.htm
@@ -1,39 +1,39 @@
 
-<footer class="footer section text-center section-even">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <ul class="social-media">
-                    <li>
-                        <a href="#">
+<footer role="contentinfo" class="footer section text-center section-even noBig">
+    <div class="container noBig">
+        <div class="row noBig">
+            <div class="col-md-12 noBig">
+                <ul class="noBig social-media">
+                    <li class="noBig">
+                        <a href="#" aria-label="social media">
                             <i class="tf-ion-social-facebook"></i>
                         </a>
                     </li>
-                    <li>
-                        <a href="#">
+                    <li class="noBig">
+                        <a href="#" aria-label="social media">
                             <i class="tf-ion-social-instagram"></i>
                         </a>
                     </li>
-                    <li>
-                        <a href="#">
+                    <li class="noBig">
+                        <a href="#"  aria-label="social media">
                             <i class="tf-ion-social-twitter"></i>
                         </a>
                     </li>
-                    <li>
-                        <a href="#">
+                    <li class="noBig">
+                        <a href="#"  aria-label="social media">
                             <i class="tf-ion-social-pinterest"></i>
                         </a>
                     </li>
                 </ul>
                 <ul class="footer-menu text-uppercase">
-                    <li>
-                        <a href="/contact">CONTACT</a>
+                    <li class="noBig">
+                        <a  aria-label="Contact"href="/contact">CONTACT</a>
                     </li>
-                    <li>
-                        <a href="#">SHOP</a>
+                    <li class="noBig">
+                        <a href="#"  aria-label="shop">SHOP</a>
                     </li>
-                    <li>
-                        <a href="/contact">PRIVACY POLICY</a>
+                    <li class="noBig">
+                        <a href="/contact"  aria-label="policy">PRIVACY POLICY</a>
                     </li>
                 </ul>
                 <p class="copyright-text">Copyright &copy;2021, E-MedHouse</p>
