--- a/templates/snippets/header.htm
+++ b/templates/snippets/header.htm
@@ -5,7 +5,7 @@
     <div class="container noBig">
         <div class="row noBig">
             <div class="col-md-4 col-xs-12 col-sm-4 noBig">
-                <div class="contact-number noBig">
+                <div class="contact-number noBig" role="doc-index">
                     <i class="tf-ion-ios-telephone"></i>
                     <span>+977 9808826654</span>
                 </div>
@@ -13,24 +13,16 @@
             <div class="col-md-4 col-xs-12 col-sm-4 noBig">
                 <!-- Site Logo -->
                 <div class="logo text-center noBig">
-                    <a href="/" class="noBig">
+                    <a aria-label="home" href="/" class="noBig dom">
                         <!-- replace logo here -->
-                        <svg class="noBig" width="135px" height="29px" viewBox="0 0 186 29" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                            xmlns:xlink="http://www.w3.org/1999/xlink">
-                            <g class="noBig" id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" font-size="40"
-                                font-family="AustinBold, Austin" font-weight="bold">
-                                <g class="noBig" id="Group" transform="translate(-108.000000, -297.000000)" fill="#000000">
-                                    <text id="AVIATO" class="noBig">
-                                        <tspan x="108.94" y="325" class="noBig">MedHouse</tspan>
-                                    </text>
-                                </g>
-                            </g>
-                        </svg>
-                    </a>
+                        MedHouse
+                        </a>
+                    </div>
                 </div>
             </div>
-            <a href="#" id="top-side-account">Account</a>
+            
             <div class="col-md-9 col-xs-12 col-sm-4 noBig" id="listOfAccount">
+                <span id="top-side-account">Account</span>
                 <!-- Cart -->
                 <ul class="top-menu text-right list-inline noBig">
                     <!-- Search -->
@@ -88,7 +80,7 @@
 <!-- End Top Header Bar -->
 
 <!-- Main Menu Section -->
-<section class="menu noBig">
+<section role="navigation" class="menu noBig">
     <nav class="navbar navigation noBig">
         <div class="container noBig">
             <div class="navbar-header noBig">
