--- a/templates/snippets/page-header.htm
+++ b/templates/snippets/page-header.htm
@@ -1,12 +1,12 @@
-<section class="page-header noBig">
+<section class="page-header noBig" role="status">
     <div class="container noBig">
         <div class="row noBig">
             <div class="col-md-12 noBig">
                 <div class="content noBig">
                     <h1 class="page-name">{{context.topic}}</h1>
                     <ol class="breadcrumb">
-                        <li class="noBig"><a href="/">{{context.account}}</a></li>
-                        <li class="active">{{context.recent_page}}</li>
+                        <li class="noBig"><a href="/" aria-label="home">{{context.account}}</a></li>
+                        <li>{{context.recent_page}}</li>
                     </ol>
                 </div>
             </div>
