--- a/templates/snippets/prescription.htm
+++ b/templates/snippets/prescription.htm
@@ -6,13 +6,13 @@
         <div class="modal-content noBig">
             <div class="modal-header noBig">
                 <button type="button" class="close" data-dismiss="modal">×</button> 
-                <h4 class="modal-title">Upload Prescription</h4>                                                             
+                <h2 class="modal-title">Upload Prescription</h2>                                                             
                 <hr>
                 <div class="modal-body noBig">
                     <div class="card-block noBig">
                         <div class="text-center mt-20 noBig">
-                            <input type="file" id="fileupload" style="display:none"/> 
-                            <button class="btn-css btn btn-primary" id="OpenfileUpload">click to upload</button>
+                            <input type="file" id="fileupload" aria-labelledby="file upload" style="display:none"/> 
+                            <button class="btn-css btn bttn" id="OpenfileUpload">click to upload</button>
                         </div>
                     </div>
                     <hr>
@@ -34,12 +34,12 @@
                     You need to register First.
 
                     <div class="text-center noBig">
-                        <button class="btn-css btn btn-primary">Submit</button>
+                        <button class="btn-css btn bttn">Submit</button>
                     </div> 
                 </div>  
             </div>
             <div class="modal-footer noBig">
-                <button type="button" class="btn-css btn btn-default" data-dismiss="modal">Close</button>                               
+                <button type="button" class="btn-css btn bttn" data-dismiss="modal">Close</button>                               
             </div>
         </div> 
     </div>                                                                      
