--- a/customer/templates/customer/signin.htm
+++ b/customer/templates/customer/signin.htm
@@ -2,15 +2,15 @@
 {% load static %}
 
 {% block content %}
-<section class="signin-page account">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-10 col-md-offset-1">
-          <div class="block text-center">
-            <a href="/">
+<section class="signin-page account noBig">
+    <div class="container noBig">
+      <div class="row noBig">
+        <div class="col-md-10 col-md-offset-1 noBig">
+          <div class="block text-center noBig">
+            <a href="/" class="noBig">
               <img alt="gravater" class="dp" src={% static '/images/favicon.png' %}>
            </a>
-            <div class="detail-txt">
+            <div class="detail-txt noBig">
               <a href="/">
                 <span class="username">
                    Med-House
@@ -19,7 +19,7 @@
            </div>
             <h3 class="text-center">Create Your Account</h3>
           
-            <form enctype="multipart/form-data" class="text-left clearfix" method="POST" action="/customer/signin/">
+            <form enctype="multipart/form-data" class="text-left clearfix noBig" method="POST" action="/customer/signin/">
               {% csrf_token %}
               
               <div class="form-group">
@@ -27,7 +27,7 @@
                 {{ form.full_name}}
                 <p class="help">{{ form.full_name.errors }}</p>
               </div>
-              <div class="form-group">
+              <div class="form-group noBig">
                 <div class="form-group">
                   <label for="exampleInputFullName">User Name</label>
                   {{ form.user_name}}
@@ -69,17 +69,20 @@
                 <p class="help">{{ img_form.image.errors }}</p>
               </div>
               <hr>
-              <div class="form-check text-center">
+              <div class="form-check text-center noBig">
                 <input type="checkbox" class="form-check-input" id="exampleCheck1" required>
                 <label class="form-check-label" for="exampleCheck1">Accept all terms and condition</label>
               </div>
-              <div class="text-center">
+              <div class="text-center noBig">
                 <button type="submit" class="btn btn-main text-center">Register Now</button>
               </div>
             </form>
-            <div class="text-center">
-              <p class="mt-20">Already have an account ?<a href="/customer/login/"> Login</a></p>
-              <p><a href="forget-password.htm"> Forgot your password?</a></p>
+            <div class="text-center noBig">
+              <br>
+              <span>Already have an account ?</span><a href="/customer/login/"> Login</a>
+              <br/>
+              <br/>
+              <p class="noBig"><a href="forget-password.htm"> Forgot your password?</a></p>
             </div>
 
           </div>
