--- a/templates/snippets/customer-header.htm
+++ b/templates/snippets/customer-header.htm
@@ -2,23 +2,13 @@
 {% include 'snippets/accessibility_modal.htm'%}
 <!-- Start Top Header Bar -->
 <section class="top-header noBig sticky">
-    <div class="container noBig">
+    <div class="container noBig" role="banner">
         <div class="col-md-12 noBig">
             <!-- Site Logo -->
             <div class="logo text-center noBig">
-                <a href="/" class="noBig">
+                <a aria-label="home" href="/" class="noBig dom">
                     <!-- replace logo here -->
-                    <svg class="noBig" width="135px" height="29px" viewBox="0 0 186 29" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                        xmlns:xlink="http://www.w3.org/1999/xlink">
-                        <g class="noBig" id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" font-size="40"
-                            font-family="AustinBold, Austin" font-weight="bold">
-                            <g class="noBig" id="Group" transform="translate(-108.000000, -297.000000)" fill="#000000">
-                                <text id="AVIATO" class="noBig">
-                                    <tspan class="noBig" x="108.94" y="325">MedHouse</tspan>
-                                </text>
-                                </g>
-                            </g>
-                        </svg>
+                    MedHouse
                     </a>
                 </div>
             </div>
@@ -42,7 +32,7 @@
 </section>
 <!-- End Top Header Bar -->
 
-<section class="menu noBig">
+<section class="menu noBig" role="navigation">
     <nav class="navbar navigation noBig">
         <div class="container noBig noBig">
             <div class="navbar-header noBig">
@@ -64,7 +54,7 @@
                     </li>
                     <!-- Home -->
                     <li class="dropdown noBig">
-                        <a href="/product/shop/">Shop</a>
+                        <a href="/product/shop/" aria-label="shop product">Shop</a>
                     </li><!-- / Home -->
 
                     <li class="dropdown noBig">
