--- a/templates/snippets/doctor-consultation.htm
+++ b/templates/snippets/doctor-consultation.htm
@@ -80,22 +80,23 @@
     <div class="container noBig">
         <div class="row noBig">
             <div class="col-xs-6 col-md-4 noBig">
-                <img class="img-responsive mt-50" src="/media/{{doctor.image}}">
+                <img class="img-responsive mt-50" src="/media/{{doctor.image}}" alt="doctor profile image">
             </div>
             <div class="col-xs-6 col-md-4 mt-10 noBig">
-                <h3><a href="/customer/doctor-detail/{{doctor.doctor.id}}/"> {{doctor.doctor.full_name}}</a></h3>
+                <h2><a href="/customerdoctor-detail/{{doctor.doctor.id}}"> {{doctor.doctor.full_name}}</a></h2>
                 <p class="text-info">{{doctor.doctor.Specialist}}</p>
                 <p>{{doctor.doctor.degree}}</p>
                 <p>{{doctor.doctor.description}}</p>
-                <a class="btn btn-main mt-20" href="/doctor/appointment/{{doctor.doctor.id}}/"> Book Appointment</a>
+                <a class="btn btn-main mt-20" role="button" href="/doctor/appointment/{{doctor.doctor.id}}">
+                     Book Appointment
+                </a>
                 
-
             </div>
             <div class="col-xs-6 col-md-4 mt-40 noBig">
                 <div class="text-center noBig">
                     <i class="tf-ion-android-calendar icon-max"></i> 
                 </div>
-                <dl class="text-center mt-10">
+                <dl class="text-center mt-10 noBig">
                     <dt>Available Day:</dt>
                     <dd>{{doctor.doctor.available_day}}</dd>
                 </dl>
