--- a/templates/snippets/doctor-header.htm
+++ b/templates/snippets/doctor-header.htm
@@ -1,53 +1,31 @@
 {% load static %}
+{% include 'snippets/accessibility_modal.htm'%}
+
 <!-- Start Top Header Bar -->
-<section class="top-header">
-    <div class="container">
-        <div class="col-md-12">
+<section class="top-header noBig sticky">
+    <div class="container noBig">
+        <div class="col-md-12 noBig">
             <!-- Site Logo -->
-            <div class="logo text-center">
-                <a href="/">
+            <div class="logo text-center noBig">
+                <a aria-label="home" href="/" class="noBig dom">
                     <!-- replace logo here -->
-                    <svg width="135px" height="29px" viewBox="0 0 186 29" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                        xmlns:xlink="http://www.w3.org/1999/xlink">
-                        <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" font-size="40"
-                            font-family="AustinBold, Austin" font-weight="bold">
-                            <g id="Group" transform="translate(-108.000000, -297.000000)" fill="#000000">
-                                <text id="AVIATO">
-                                    <tspan x="108.94" y="325">MedHouse</tspan>
-                                </text>
-                                </g>
-                            </g>
-                        </svg>
+                    MedHouse
                     </a>
                 </div>
             </div>
-            <div class="col-md-9 col-xs-12 col-sm-4" id="listOfAccount">
+            </div>
+            <div class="col-md-9 col-xs-12 col-sm-4 noBig" id="listOfAccount">
                 <!-- Cart -->
-                <ul class="top-menu text-right list-inline">
+                <ul class="top-menu text-right list-inline noBig">
                     <li>
-                        <a href="/customer/logout/" class="btn btn-transparent">Log Out</a>
+                        <a href="/customer/logout/" class="btn btn-transparent noBig">Log Out</a>
                     </li>
                 </ul><!-- / .nav .navbar-nav .navbar-right -->
             </div>
         </div>
     </div>
+    <i id="check-ace" class="fa fa-check-circle fa-lg noBig" aria-hidden="true"></i>
+    <a type="button" class="noBig" check-ace="0" id="ace-btn"><i class="fa fa-universal-access" aria-hidden="true" data-target="#My-right-side-modal" data-toggle="modal" id="my-circle-btn"></i>
+    </a>
 </section>
 <!-- End Top Header Bar -->
-
-<section class="menu">
-    <nav class="navbar navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <h2 class="menu-title">Main Menu</h2>
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            </div><!-- / .navbar-header -->
-           
-        </div><!-- / .container -->
-    </nav>
-</section>
