--- a/templates/snippets/doctor.htm
+++ b/templates/snippets/doctor.htm
@@ -1,22 +1,22 @@
 {% load static %}
 <!-- .modal -->
-<div class="modal fade" id="Mydoctormodal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
+<div class="modal fade noBig" id="Mydoctormodal">
+    <div class="modal-dialog noBig">
+        <div class="modal-content noBig">
+            <div class="modal-header noBig">
                 <button type="button" class="close" data-dismiss="modal">×</button> 
                 <h4 class="modal-title">
                     Book An Appointment
                 </h4>                                                             
                 <hr>
-                <dl class="dl-horizontal" style="margin: 0 94px;">
+                <dl class="dl-horizontal noBig" style="margin: 0 94px;">
                     <dt>Doctor Name:</dt>
                     <dd>Dr.Hari parsad koirala</dd>
                 </dl>
-                <div class="modal-body">
-                    <div class="card-block">
-                        <div class="text-center m-t-20">
-                            <div class="form-group">
+                <div class="modal-body noBig">
+                    <div class="card-block noBig">
+                        <div class="text-center noBig noBig mt-20">
+                            <div class="form-group noBig">
                                 <label for="OpenfileUpload">Upload Prescription</label>
                                 <input class="mt-20" style="padding-left: 154px;" type="file" id="fileUpload">
                             </div>
@@ -29,19 +29,19 @@
                     
                         <label for="fname">Payment Method</label>
                         
-                        <div class="radio">
+                        <div class="radio noBig">
                             <label>
                             <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
                                 E-Sewa
                             </label>
                         </div>
-                        <div class="radio">
+                        <div class="radio noBig">
                             <label>
                             <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
                                 Khalti
                             </label>
                         </div>
-                        <div class="radio">
+                        <div class="radio noBig">
                             <label>
                             <input type="radio" name="optionsRadios" id="optionsRadios3" value="option3">
                                 Cash on Delivery
@@ -50,7 +50,7 @@
                     </form>
                 </div>  
             </div>
-            <div class="modal-footer">
+            <div class="modal-footer noBig">
                 <button class="btn-css btn btn-primary">Book Appointment</button>
                 <button type="button" class="btn-css btn btn-default" data-dismiss="modal">Close</button>                               
             </div>
@@ -60,14 +60,14 @@
 
 <!-- doctor 1 -->
 <hr>
-<section class="about section">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-6 col-md-4">
-                <img class="img-responsive mt-50" src={% static 'images/doctors/doctor1.jpg' %}>
+<section class="about section noBig">
+    <div class="container noBig">
+        <div class="row noBig">
+            <div class="col-xs-6 col-md-4 noBig">
+                <img class="img-responsive mt-50" alt="doctor profile image" src={% static 'images/doctors/doctor1.jpg' %}>
             </div>
-            <div class="col-xs-6 col-md-4 mt-10">
-                <h3>Dr. Joshi Shambhu, MD (NAMS), MBBS(KU), FAAD(USA)</h3>
+            <div class="col-xs-6 col-md-4 noBig mt-10">
+                <p class="title-text">Dr. Joshi Shambhu, MD (NAMS), MBBS(KU), FAAD(USA)</p>
                 <p class="text-info">Specialization: Consultation for Skin and Hair(छाला र कपाल सामस्याको परामार्श),Consultation for Nails and STD(नड़ र यौन संक्रमित रोग)</p>
                 <p>MBBS- KU</p>
                 <p>FAM - Consultant Dermatologist, Sexologist and Cosmetic LASER Specialist</p>
@@ -75,17 +75,17 @@
                 
 
             </div>
-            <div class="col-xs-6 col-md-4 mt-40">
-                <div class="text-center">
+            <div class="col-xs-6 col-md-4 noBig mt-40">
+                <div class="text-center noBig">
                     <i class="tf-ion-android-calendar icon-max"></i> 
                 </div>
-                <dl class="text-center mt-10">
+                <dl class="text-center noBig mt-10">
                     <dt>Available Day:</dt>
                     <dd>19 Apr 2020</dd>
                     <dd>18:00:00 - 20:00:00</dd>
                 </dl>
     
-                <dl class="text-center">
+                <dl class="text-center noBig">
                     <dt>NMC No</dt>
                     <dd>07097</dd>
 
@@ -99,31 +99,31 @@
 <hr>
 
 <!-- doctor 2 -->
-<section class="about section">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-6 col-md-4">
-                <img class="img-responsive mt-50" src={% static 'images/doctors/doctor2.jpg' %}>
+<section class="about section noBig">
+    <div class="container noBig">
+        <div class="row noBig">
+            <div class="col-xs-6 col-md-4 noBig">
+                <img class="img-responsive mt-50" alt="doctor profile image" src={% static 'images/doctors/doctor2.jpg' %}>
             </div>
-            <div class="col-xs-6 col-md-4 mt-10">
-                <h3>Dr. Joshi Shambhu, MD (NAMS), MBBS(KU), FAAD(USA)</h3>
+            <div class="col-xs-6 col-md-4 noBig mt-10">
+                <p class="title-text">Dr. Joshi Shambhu, MD (NAMS), MBBS(KU), FAAD(USA)</p>
                 <p class="text-info">Specialization: Consultation for Skin and Hair(छाला र कपाल सामस्याको परामार्श),Consultation for Nails and STD(नड़ र यौन संक्रमित रोग)</p>
                 <p>MBBS- KU</p>
                 <p>FAM - Consultant Dermatologist, Sexologist and Cosmetic LASER Specialist</p>
                 <a class="btn btn-main mt-20" data-target="#Mydoctormodal" data-toggle="modal">Login to Book Appointment</a>
 
             </div>
-            <div class="col-xs-6 col-md-4 mt-40">
-                <div class="text-center">
+            <div class="col-xs-6 col-md-4 noBig mt-40">
+                <div class="text-center noBig">
                     <i class="tf-ion-android-calendar icon-max"></i> 
                 </div>
-                <dl class="text-center">
+                <dl class="text-center noBig">
                     <dt>Available Day:</dt>
                     <dd>19 Apr 2020</dd>
                     <dd>18:00:00 - 20:00:00</dd>
                 </dl>
     
-                <dl class="text-center">
+                <dl class="text-center noBig">
                     <dt>NMC No</dt>
                     <dd>07097</dd>
 
@@ -137,31 +137,31 @@
 <hr>
 
 <!-- doctor 3 -->
-<section class="about section">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-6 col-md-4">
-                <img class="img-responsive mt-50" src={% static 'images/doctors/doctor3.jpg' %}>
+<section class="about section noBig">
+    <div class="container noBig">
+        <div class="row noBig">
+            <div class="col-xs-6 col-md-4 noBig">
+                <img class="img-responsive mt-50" alt="doctor profile image" src={% static 'images/doctors/doctor3.jpg' %}>
             </div>
-            <div class="col-xs-6 col-md-4 mt-10">
-                <h3>Dr. Joshi Shambhu, MD (NAMS), MBBS(KU), FAAD(USA)</h3>
+            <div class="col-xs-6 col-md-4 noBig mt-10">
+                <p class="title-text">Dr. Joshi Shambhu, MD (NAMS), MBBS(KU), FAAD(USA)</p>
                 <p class="text-info">Specialization: Consultation for Skin and Hair(छाला र कपाल सामस्याको परामार्श),Consultation for Nails and STD(नड़ र यौन संक्रमित रोग)</p>
                 <p>MBBS- KU</p>
                 <p>FAM - Consultant Dermatologist, Sexologist and Cosmetic LASER Specialist</p>
                 <a class="btn btn-main mt-20" data-target="#Mydoctormodal" data-toggle="modal">Login to Book Appointment</a>
 
             </div>
-            <div class="col-xs-6 col-md-4 mt-40">
-                <div class="text-center">
+            <div class="col-xs-6 col-md-4 noBig mt-40">
+                <div class="text-center noBig">
                     <i class="tf-ion-android-calendar icon-max"></i> 
                 </div>
-                <dl class="text-center mt-10">
+                <dl class="text-center noBig mt-10">
                     <dt>Available Day:</dt>
                     <dd>19 Apr 2020</dd>
                     <dd>18:00:00 - 20:00:00</dd>
                 </dl>
     
-                <dl class="text-center">
+                <dl class="text-center noBig">
                     <dt>NMC No</dt>
                     <dd>07097</dd>
 
@@ -174,40 +174,5 @@
 </section>
 <hr>
 
-<!--doctor 4 -->
-<section class="about section">
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-6 col-md-4">
-                <img class="img-responsive mt-50" src={% static 'images/doctors/doctor4.jpg' %}>
-            </div>
-            <div class="col-xs-6 col-md-4 mt-10">
-                <h3>Dr. Joshi Shambhu, MD (NAMS), MBBS(KU), FAAD(USA)</h3>
-                <p class="text-info">Specialization: Consultation for Skin and Hair(छाला र कपाल सामस्याको परामार्श),Consultation for Nails and STD(नड़ र यौन संक्रमित रोग)</p>
-                <p>MBBS- KU</p>
-                <p>FAM - Consultant Dermatologist, Sexologist and Cosmetic LASER Specialist</p>
-                <a class="btn btn-main mt-20" data-target="#Mydoctormodal" data-toggle="modal">Login to Book Appointment</a>
-
-            </div>
-            <div class="col-xs-6 col-md-4 mt-40">
-                <div class="text-center">
-                    <i class="tf-ion-android-calendar icon-max"></i> 
-                </div>
-                <dl class="text-center mt-10">
-                    <dt>Available Day:</dt>
-                    <dd>19 Apr 2020</dd>
-                    <dd>18:00:00 - 20:00:00</dd>
-                </dl>
-    
-                <dl class="text-center">
-                    <dt>NMC No</dt>
-                    <dd>07097</dd>
-
-                    <dt>Chharge: Rs</dt>
-                    <dd>500</dd>
-                </dl>
-            </div>
-        </div>
-    </div>
 </section>
 <hr>
