--- a/templates/snippets/footer1.htm
+++ b/templates/snippets/footer1.htm
@@ -1,44 +1,44 @@
 <div class="section noBig section-odd">
     <div class="container noBig">
         <div class="row noBig">
-        <div class="col-md-3 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
-            <h4 class="mb-4">Contact</h4>
-            <p>Balkumari, lalitpur Nepal</p>
-            <p>+025-700-0437</p>
-            <p>E.medHouse@gmail.com</p>
-            <ul class="list-inline social-icons">
-            <li class="list-inline-item"><a href="#"><i class="ti-facebook"></i></a></li>
-            <li class="list-inline-item"><a href="#"><i class="ti-twitter-alt"></i></a></li>
-            <li class="list-inline-item"><a href="#"><i class="ti-vimeo-alt"></i></a></li>
-            <li class="list-inline-item"><a href="#"><i class="ti-google"></i></a></li>
-            </ul>
-        </div>
-        <div class="col-md-3 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
-            <h4 class="mb-4">Category</h4>
-            <ul class="pl-0 list-unstyled noBig">
-            <li class="mb-2 noBig"><a class="text-color noBig" href=".htm">Medicine</a></li>
-            <li class="mb-2 noBig"><a class="text-color noBig" href=".htm">Device</a></li>
-            <li class="mb-2 noBig"><a class="text-color noBig" href=".htm">Hygenic</a></li>
-            </ul>
-        </div>
-        <div class="col-md-3 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
-            <h4 class="mb-4">Useful Link</h4>
-            <ul class="pl-0 list-unstyled noBig">
-            <li class="mb-2 noBig"><a class="text-color noBig" href="about.htm">About Us</a></li>
-            <li class="mb-2 noBig"><a class="text-color noBig" href="address.htm">Support</a></li>
-            <li class="mb-2 noBig"><a class="text-color noBig" href="shop.htm">Our Shop</a></li>
-            <li class="mb-2 noBig"><a class="text-color noBig" href="contact.htm">Contact Us</a></li>
-            </ul>
-        </div>
-        <div class="col-md-3 col-sm-6 text-center text-sm-left">
-            <h4 class="mb-4">Our Policies</h4>
-            <ul class="pl-0 list-unstyled noBig">
-            <li class="mb-2 noBig"><a class="text-color noBig" href="404.htm">Privacy Policy</a></li>
-            <li class="mb-2 noBig"><a class="text-color noBig" href="404.htm">Terms & Conditions</a></li>
-            <li class="mb-2 noBig"><a class="text-color noBig" href="404.htm">Cookie Policy</a></li>
-            <li class="mb-2 noBig"><a class="text-color noBig" href="404.htm">Terms of Sale</a></li>
-            </ul>
-        </div>
+            <div class="col-md-3 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
+                <p class="mb-4 title-text">Contact</p>
+                <p>Balkumari, lalitpur Nepal</p>
+                <p>+025-700-0437</p>
+                <p>E.medHouse@gmail.com</p>
+                <ul class="list-inline social-icons">
+                <li class="list-inline-item"><a href="#" aria-label="social-media"><i class="ti-facebook"></i></a></li>
+                <li class="list-inline-item"><a href="#" aria-label="social-media"><i class="ti-twitter-alt"></i></a></li>
+                <li class="list-inline-item"><a href="#" aria-label="social-media"><i class="ti-vimeo-alt"></i></a></li>
+                <li class="list-inline-item"><a href="#"  aria-label="social-media"><i class="ti-google"></i></a></li>
+                </ul>
+            </div>
+            <div class="col-md-3 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
+                <p class="mb-4 title-text">Category</p>
+                <ul class="pl-0 list-unstyled noBig">
+                <li class="mb-2 noBig"><a class="text-color noBig" aria-label="Category" href=".htm">Medicine</a></li>
+                <li class="mb-2 noBig"><a class="text-color noBig" aria-label="Category" href=".htm">Device</a></li>
+                <li class="mb-2 noBig"><a class="text-color noBig" aria-label="Category" href=".htm">Hygenic</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3 col-sm-6 mb-5 mb-md-0 text-center text-sm-left">
+                <p class="mb-4 title-text">Useful Link</p>
+                <ul class="pl-0 list-unstyled noBig">
+                <li class="mb-2 noBig"><a class="text-color noBig" aria-label="about us" href="about.htm">About Us</a></li>
+                <li class="mb-2 noBig"><a class="text-color noBig" aria-label="address"href="address.htm">Support</a></li>
+                <li class="mb-2 noBig"><a class="text-color noBig" aria-label="shop us" href="shop.htm">Our Shop</a></li>
+                <li class="mb-2 noBig"><a class="text-color noBig" aria-label="Contact us" href="contact.htm">Contact Us</a></li>
+                </ul>
+            </div>
+            <div class="col-md-3 col-sm-6 text-center text-sm-left">
+                <p class="mb-4 title-text">Our Policies</p>
+                <ul class="pl-0 list-unstyled noBig">
+                <li class="mb-2 noBig"><a class="text-color noBig" href="privacy.htm">Privacy Policy</a></li>
+                <li class="mb-2 noBig"><a class="text-color noBig" href="404.htm">Terms & Conditions</a></li>
+                <li class="mb-2 noBig"><a class="text-color noBig" href="404.htm">Cookie Policy</a></li>
+                <li class="mb-2 noBig"><a class="text-color noBig" href="404.htm">Terms of Sale</a></li>
+                </ul>
+            </div>
         </div>
     </div>
-    </div>
+</div>
